@@ -3,6 +3,9 @@ Revision history for Perl extension App::Sqitch
 0.61
      - Changed the `current_changes()` and `current_tags()` Engine methods so
        that they return iterator code references instead of lists.
+     - Added the `log` command.
+     - Added the `strftime:$string` and `cldr:$string` options to
+       `--date-format` in the `status` and `log` commands.
 
 0.60  2012-07-07T11:12:26Z
      - Removed some discussion of VCS integration, since it is not yet
